--- a/index.html
+++ b/index.html
@@ -88,29 +88,7 @@
 					</div>
 				</div>
 			</section> -->
-            <section class="section-e">
-                <p class="ca">Contract Address</p>
-                <div class="contract-cont">
-                    <p>BNB:</p>
-                    <input
-                        type="text"
-                        value="0xA7d8f6b160dF6a8313Fdde32741DB41b8C0F8916"
-                        id="ca-num"
-                        readonly
-                    />
-                    <svg
-                        onclick="copyToClipboard(event)"
-                        id="fsvg"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512"
-                        fill="#1AA4EB"
-                    >
-                        <path
-                            d="M64 464H288c8.8 0 16-7.2 16-16V384h48v64c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V224c0-35.3 28.7-64 64-64h64v48H64c-8.8 0-16 7.2-16 16V448c0 8.8 7.2 16 16 16zM224 304H448c8.8 0 16-7.2 16-16V64c0-8.8-7.2-16-16-16H224c-8.8 0-16 7.2-16 16V288c0 8.8 7.2 16 16 16zm-64-16V64c0-35.3 28.7-64 64-64H448c35.3 0 64 28.7 64 64V288c0 35.3-28.7 64-64 64H224c-35.3 0-64-28.7-64-64z"
-                        />
-                    </svg>
-                </div>
-            </section>
+       
             <section class="section-3">
                 <div class="peace">
                     <img src="images/bonke1.png" alt="" />
@@ -315,6 +293,10 @@
 					</div>
 				</div>
 			</section> -->
+
+			<section class="sectionback">
+
+			</section>
             <div class="container py-5">
                 <h1>Baby Bonke Roadmap</h1>
                 <div class="main-timeline-4 text-white">
