--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             rel="stylesheet"
         />
         <script src="poko.js"></script>
-        <title>World Peace</title>
+        <title>Baby Bonke</title>
     </head>
     <body class="none">
         <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
@@ -29,9 +29,7 @@
                     </a>
                 </div>
                 <div class="head-button bounce-1">
-                    <a
-                        href="https://ape.store/"
-                    >
+                    <a href="https://ape.store/">
                         <button>
                             Ape Store
                             <img
@@ -88,10 +86,15 @@
 					</div>
 				</div>
 			</section> -->
-       
+
             <section class="section-3">
                 <div class="peace">
-                    <img src="images/bonke1.png" alt="" />
+                    <video width="600" height="700" controls loop autoplay>
+                        <source
+                            src="images/202406042207-ezgif.com-video-to-gif-converter.gif.mp4"
+                            type="video/mp4"
+                        />
+                    </video>
                 </div>
                 <div data-aos="fade-left" class="poko">
                     <b>Tokenomics </b>
@@ -294,9 +297,7 @@
 				</div>
 			</section> -->
 
-			<section class="sectionback">
-
-			</section>
+            <section class="sectionback"></section>
             <div class="container py-5">
                 <h1>Baby Bonke Roadmap</h1>
                 <div class="main-timeline-4 text-white">
