--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <section class="section-3">
                 <div class="peace">
-                    <video width="600" height="700" controls loop autoplay>
+                    <video width="600" height="700" autoplay controls loop>
                         <source
                             src="images/202406042207-ezgif.com-video-to-gif-converter.gif.mp4"
                             type="video/mp4"
@@ -141,7 +141,7 @@
                     <li>
                         <p>LP BURNT - 100%</p>
                     </li>
-                    <li><p>5 BILLION TOTAL SUPPLY</p></li>
+                    <li><p>1 BILLION TOTAL SUPPLY</p></li>
                 </ul>
             </div>
             <hr class="section-line" />
