--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     </a>
                 </div>
                 <div class="head-button bounce-1">
-                    <a href="https://ape.store/">
+                    <a
+                        href="https://ape.store/base/0xf8231c3f70651f4e40f9ee7bb3b4e606cd498b2a"
+                    >
                         <button>
                             Ape Store
                             <img
@@ -86,7 +88,10 @@
 					</div>
 				</div>
 			</section> -->
-
+            <div>
+                <p class="ca">Contract Address</p>
+                <h2 class="ca-num">0xf8231c3f70651f4e40f9ee7bb3b4e606cd498b2a</h2>
+            </div>
             <section class="section-3">
                 <div class="peace">
                     <video width="600" height="700" autoplay controls loop>
@@ -236,10 +241,7 @@
 					<p class="fp2">STEP 2</p>
 					<h1 class="swap">SWAP BASE FOR $FJB</h1>
 				</div>
-				<div>
-					<p class="ca">Contract Address</p>
-					<h2 class="ca-num">0x2335341234FDC33FW3RF3TF233232</h2>
-				</div>
+				
 				<div>
 					<button class="buy">BUY $FJB</button>
 				</div>
